--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <audio autoplay src="backsound.mp3"></audio>
     <div class="container">
         <div class="wrapper">
             <img src="image1.png" alt="gambar1" class="gambar1 animate__animated animate__fadeInDown">
